k8s-cluster-configuration/applications/a2w/base/service.yml
apiVersion: v1
kind: Service
metadata:
  name: a2w-service
  namespace: a2w
spec:
  selector:
    app: a2w
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
